# power-schedule

./: Cargo.toml  README.md
src/: main.rs
src/ui/: mod.rs  window.rs
src/ui/components/: icon.rs  icon_button.rs  icon_buttons.rs  mod.rs
