[package]
name = "power-schedule"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
chrono = "0.4.37"
confy = "0.6.1"
iced = { version = "0.13.1", features = ["image", "debug", "lazy"] }
tray-icon = "0.19.2"
uuid = "1.8.0"
